--- a/notebooks/kobe_pipeline_completo.ipynb
+++ b/notebooks/kobe_pipeline_completo.ipynb
@@ -17,41 +17,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           lat       lon  minutes_remaining  period  playoffs  shot_distance  \\\n",
-      "1      34.0443 -118.4268                 10       1         0             15   \n",
-      "2      33.9093 -118.3708                  7       1         0             16   \n",
-      "3      33.8693 -118.1318                  6       1         0             22   \n",
-      "4      34.0443 -118.2698                  6       2         0              0   \n",
-      "5      34.0553 -118.4148                  9       3         0             14   \n",
-      "...        ...       ...                ...     ...       ...            ...   \n",
-      "30690  33.9443 -118.3828                 11       4         1             15   \n",
-      "30691  34.0443 -118.2698                  7       4         1              0   \n",
-      "30692  33.9963 -118.2688                  6       4         1              4   \n",
-      "30694  33.8783 -118.4038                  3       4         1             21   \n",
-      "30696  33.9723 -118.2688                  0       4         1              7   \n",
-      "\n",
-      "       shot_made_flag  \n",
-      "1                 0.0  \n",
-      "2                 1.0  \n",
-      "3                 0.0  \n",
-      "4                 1.0  \n",
-      "5                 0.0  \n",
-      "...               ...  \n",
-      "30690             0.0  \n",
-      "30691             0.0  \n",
-      "30692             0.0  \n",
-      "30694             1.0  \n",
-      "30696             0.0  \n",
-      "\n",
-      "[20285 rows x 7 columns]\n"
+      "antes da limpeza\n",
+      "após da limpeza\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(20285, 7)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -59,6 +44,9 @@
     "\n",
     "# Carregar base de dados\n",
     "df = pd.read_parquet('../data/01_raw/dataset_kobe_dev.parquet')\n",
+    "\n",
+    "print(\"antes da limpeza\")\n",
+    "print(df.shape)\n",
     "\n",
     "# Selecionar apenas as colunas solicitadas\n",
     "cols = ['lat', 'lon', 'minutes_remaining', 'period', 'playoffs', 'shot_distance', 'shot_made_flag']\n",
@@ -68,9 +56,8 @@
     "df = df.dropna()\n",
     "\n",
     "# Exibir dimensões do dataset limpo\n",
-    "df.shape\n",
-    "\n",
-    "print(df)"
+    "print(\"após da limpeza\")\n",
+    "df.shape"
    ]
   },
   {
